# uv-monorepo

./: README.md
py-api/: main.py  pyproject.toml
py-commonlib/: pyproject.toml
py-commonlib/src/py_commonlib/: datetime_lib.py
py-core/: main.py  pyproject.toml
