[project]
name = "py-commonlib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ryeoschach", email = "3210000@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
